add cookie info

--- a/node/public/gakf/addSick.html
+++ b/node/public/gakf/addSick.html
@@ -135,7 +135,7 @@
 	            "doctor_name": "",
 	            "vteUrl":"dd"
 			}
-			var temp = store.get("user");
+			var temp = store.get("user")||RC["user"]();
 			var id = temp.id,doctor_id = temp.doctor_id;
 			data.sickId = id;
 
