--- a/node/public/gakf/between.html
+++ b/node/public/gakf/between.html
@@ -13,7 +13,7 @@
 <body ms-controller="test" class="ms-controller">
 	<div class="" id="gradeList">
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
-			<span class="my-title">{{el.title}}</span>
+			<b class="my-title">{{el.title}}</b>
 			<ul class="list-group " ms-if="el.type == 'checkbox'">
 			  <li class="list-group-item checkbox" ms-repeat-el="el.keys"  ms-click="click">
 			  	<div class="col-xs-8">
@@ -60,7 +60,7 @@
 			});
 
 			var data = {},tempobj={}; //sick has save btn doctor hasn't save btn
-			var temp = store.get("user"),id="";
+			var temp = store.get("user")||RC["user"](),id="";
 			if(temp.type =="doctor"){
 				data.isshow = true;
 			}else {
