--- a/node/public/gakf/communicate.html
+++ b/node/public/gakf/communicate.html
@@ -93,7 +93,7 @@
 	<script type="text/javascript">
 		require(["template","store"],function(template,store){
 			template.helper('dateFormat', RC["dateFormat"]);
-			var data = {},user = store.get("user");
+			var data = {},user = store.get("user")||RC["user"]();
 			if(user.type == "sick"){
 				url = "/answer/session?sick_id="+user.id;
 				sickurl = "/sick/info?id="+user.id;
