--- a/node/public/gakf/cxgwpg.html
+++ b/node/public/gakf/cxgwpg.html
@@ -14,7 +14,7 @@
 	<div class="" id="gradeList">
 		<div class="spacer5"></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
-			<span class="my-title">{{el.title}}</span>
+			<b class="my-title">{{el.title}}</b>
 			<ul class="list-group " ms-if="el.type == 'checkbox'">
 			  <li class="list-group-item checkbox" ms-repeat-el="el.keys"  ms-click="click">
 			  	<div class="col-xs-9">
@@ -50,7 +50,7 @@
 			});
 
 			var data = {},tempobj={}; //sick has save btn doctor hasn't save btn
-			var temp = store.get("user"),id="";
+			var temp = store.get("user")||RC["user"](),id="";
 			if(temp.type =="doctor"){
 				data.isshow = false;
 			}else {
