--- a/node/public/gakf/hss_right.html
+++ b/node/public/gakf/hss_right.html
@@ -29,7 +29,7 @@
 		</div>
 		<div class="spacer5" ms-if="d.summary==''"></div>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
-			<span class="my-title">{{el.title}}</span>
+			<b class="my-title">{{el.title}}</b>
 			<ul class="list-group " ms-if="el.type == 'radio'">
 			  <li class="list-group-item radio" ms-repeat-el="el.keys"  ms-click="click">
 			  	<div class="col-xs-8">
@@ -76,7 +76,7 @@
 			});
 
 			var data = {},tempobj={}; //sick has save btn doctor hasn't save btn
-			var temp = store.get("user"),id="";
+			var temp = store.get("user") || RC["user"](),id="";
 			if(temp.type =="doctor"){
 				data.isshow = true;
 			}else {
