--- a/node/public/gakf/inpatientInfo.html
+++ b/node/public/gakf/inpatientInfo.html
@@ -26,7 +26,7 @@
 	<script type="text/javascript">
 
 	require(["store"],function(store){
-		var data={},user=store.get("user");
+		var data={},user=store.get("user") || RC["user"]();
 				
 		if(user.type == "doctor"){
 			window.location.href = "/gakf/sick.html";
