--- a/node/public/gakf/register.html
+++ b/node/public/gakf/register.html
@@ -3,16 +3,24 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no"/>
-	<title>病人注册</title>
+	<title>患者注册</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
 	<script type="text/javascript" src="./static/js/require.js"></script>
 
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
+	<style type="text/css">
+		#agreeCon{display: none;}
+		.readAgree{
+		    display: block;
+		    height: 30px;
+		    padding-left: 50px;
+		}
+	</style>
 </head>
 <body ms-controller="test" class="ms-controller">
-	<div class="container">
+	<div class="container1 container">
 		<div class="spacer50"></div>
 		<form id="regForm" method="post" action="/user/reg">
 			
@@ -75,15 +83,30 @@
 			<div class="form-group">
 				<input type="text" class="form-control my-input account" name="bed_no" placeholder="床号" >
 			</div>
-
+			<div class="checkbox " style="padding: 0px 15px;">
+			    <label style="line-height: 30px;">
+			      <input type="checkbox" name="agree"> 我已阅读并同意
+			    </label>
+			</div>
+			<a href="javascript:void(0)" class="orange readAgree ">用户协议</a>
 			<div class="form-group text-center">
 				<button type="submit" class="btn btn-primary my-button">注册</button>
 			</div>
 			<input type="hidden" name="wx_id" value="11">
 		</form>
 	</div>
+	<div id="agreeCon">
+	</div>	
 	<script type="text/javascript">
 		require(["validate.form","avalon"],function(reg){
+
+				$("#agreeCon").load("./agree.html");
+				$(".readAgree").on("touchstart",function(){
+					$("#agreeCon").show();
+					$(".container1").hide();
+					$("html,body").animate({scrollTop:0},500);
+				});
+				
 				reg.validate("regForm");
 				var data = {
 					hospital:[],
