add doctor infor

--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -23,11 +23,12 @@
 			  </div>
 			  <div class="panel-body">
 			  	<div class="row">
+			  		<div class="col-xs-5">医生：{{el.doctor_name}}</div>
 			  		<div class="col-xs-7">手术类型：{{el.operate_type}}</div>
-			  		<div class="col-xs-5">住院：{{el.in_dur}}天</div>
 			  	</div>
 			  	<div class="row">
-			  		<div class="col-xs-12">评级：{{el.care_level}}</div>
+			  		<div class="col-xs-5">住院：{{el.in_dur}}天</div>
+			  		<div class="col-xs-7">评级：{{el.care_level}}</div>
 			  	</div>
 			  </div>
 			</div>
