fix loginout bug and doctor info

--- a/node/public/gakf/setting.html
+++ b/node/public/gakf/setting.html
@@ -87,8 +87,7 @@
 				dataType: "json", 
 				success: function(obj){
 					store.remove("user");
-					window.location.href = "/gakf/login.html";
-					
+					window.location.href = "http://www.guanaikangfu.com/gakf/login.html";
 	    		},
 	    		error:function(){
 
