--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -14,7 +14,7 @@
 <body ms-controller="test" class="ms-controller">
 	<div class="container">
 		<a ms-href="sickDetail.html?id={{el.id}}" style="display: block;" ms-repeat-el="d">
-			<div class="panel panel-default my-panel" style="margin-top: 10px;">
+			<div class="panel panel-default my-panel" style="margin-top: 10px;margin-bottom:10px;">
 			  <div class="panel-heading " style="background: #fff;">
 			  	<div class="row">
 			  		<div class="col-xs-6 title text-right">{{el.bed_id}}号床</div>
