--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -246,7 +246,12 @@
 			          	})
 			          }
 			    });
-			    avalon.scan();
+			   if(temp.type == "doctor"){
+			   	 avalon.scan();
+			   }else{
+			   	 $("body").html("<span style='line-height:150px;'>关注“关艾康复”微信公众号</span>").removeClass("ms-controller").css({"text-align":"center"});
+					return ;
+			   }
 			    $.ajax({ 
 					type:"get",
 					url: "/sick/info?id="+id,
