--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -86,16 +86,13 @@
 		</ul>
 		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
 		<ul class="list-group">
-			<!-- <li class="list-group-item">
-		  		<a ms-href="/gakf/taboos.html?sick_id={{d.sickId}}">
+			<li class="list-group-item">
+		  		<a  ms-if="!d.isvisible" ms-href="/gakf/taboos.html?sick_id={{d.sickId}}&gender={{d.gender}}">
   			  		<span>安全用药量表</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
-  					<span class="right orange sl8" ms-if="d.select_count!=''">共 {{d.select_count}} 项用药禁忌</span>
-  					<span class="right orange sl8" ms-if="!d.select_count">无用药禁忌</span>
+  					<span class="right orange sl8">点击填写</span>
 		  		</a>
-		 	</li> -->
-		 	<li class="list-group-item">
-		  		<a ms-href="/gakf/recommend.html?sick_id={{d.sickId}}&irr={{d.irr}}">
+		  		<a ms-if="d.isvisible" ms-href="/gakf/recommend.html?sick_id={{d.sickId}}&irr={{d.irr}}">
   			  		<span>安全用药建议 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.f_drug_count!=''">共 {{d.f_drug_count}} 条建议</span>
@@ -106,13 +103,13 @@
 		<div ms-visible="d.isvisible">
 			<span style="padding:5px 0px;display: inline-block;">长期登记量表（医生填写）</span>
 			<ul class="list-group">
-				<li class="list-group-item gray">
-				  	<span>入院日期</span>
-				  	<input type="date" class="right text-right my-input1 gray" ms-duplex="d.in_day" >
+				<li class="list-group-item gray" >
+				  	<span  style="float:left;line-height: 20px;">入院日期</span>
+				  	<input  type="date" class="right text-right my-input1 gray" ms-duplex="d.in_day" style="line-height:20px;display:block;">
 				</li>
 				<li class="list-group-item">
-				  	<span>出院日期</span>
-					<input  type="date" class="right text-right my-input1" ms-duplex="d.out_day" >
+				  	<span style="float:left;line-height: 20px;">出院日期</span>
+					<input  type="date" class="right text-right my-input1" ms-duplex="d.out_day" style="line-height:20px;display:block;">
 				</li>
 				
 				<li class="list-group-item">
