fix liangbiao android

--- a/node/public/gakf/cxgwpg.html
+++ b/node/public/gakf/cxgwpg.html
@@ -44,7 +44,7 @@
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
 			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
-			$("#gradeList").on("tap",".checkbox",function(){
+			$("#gradeList").on("click",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
