--- a/node/public/gakf/hss_right.html
+++ b/node/public/gakf/hss_right.html
@@ -68,7 +68,7 @@
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
 			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
-			$("#gradeList").on("tap",".radio",function(){
+			$("#gradeList").on("click",".radio",function(){
 				var temp = $(this).find(".tag"),p=$(this).parent().parent();
 				if(p.data("selected"))RC.remove(p.data("selected"));
 				RC.selected(this,temp.attr("alt"));
