--- a/node/public/gakf/cxgwpg.html
+++ b/node/public/gakf/cxgwpg.html
@@ -43,8 +43,8 @@
 	</nav>
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
-			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
-			$("#gradeList").on("click",".checkbox",function(){
+			//Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
+			$("#gradeList").on("tap",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
 			});
