--- a/node/public/gakf/taboos.html
+++ b/node/public/gakf/taboos.html
@@ -65,7 +65,7 @@
 	</nav>
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
-			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
+			//Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
 			$("#gradeList").on("tap",".checkbox",function(){
 				var temp = $(this).find(".tag");
 				RC.selected(this,temp.attr("alt"));
