--- a/node/public/gakf/rapt.html
+++ b/node/public/gakf/rapt.html
@@ -80,9 +80,9 @@
 	</nav>
 	<script type="text/javascript">
 		require(["store","avalon","index"],function(store){
-			Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
+			//Zhi.detectGesture(document.getElementById('gradeList'), ['tap']);
 			var user=store.get("user") || RC["user"]();
-			$("#gradeList").on("click",".checkbox",function(){
+			$("#gradeList").on("tap",".checkbox",function(){
 				var score="",temp = $(this).find(".tag");
 				if(user.type == "doctor"){
 					score = temp.attr("alt");
@@ -91,7 +91,7 @@
 			});
 			var selected ;
 			
-			$("#gradeList").on("click",".radio",function(){
+			$("#gradeList").on("tap",".radio",function(){
 				var score="", temp = $(this).find(".tag");
 				if(selected)RC.remove(selected);
 				if(user.type == "doctor"){
