--- a/node/public/gakf/msg.html
+++ b/node/public/gakf/msg.html
@@ -2,17 +2,50 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=no"/>
 	<title>注册提示</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
+	<script  type="text/javascript" src="./static/js/require.js"></script>
+	<script type="text/javascript" src="./static/js/main.js"></script>
+	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
 <body>
 	<div class="container">
 		<div class="spacer50"></div>
 		<div class="text-center f20">
-			请耐心等待医生审核
+			请耐心等待 <span id="doctor_name" class="title" style="font-size: 16px"></span> 医生审核
 		</div>
+
 	</div>
+	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
+	  <div class="container text-center" style="height: 42px; line-height: 42px;">
+	    <div class="row">
+	    	<div class="col-xs-12">
+	    		<input style="background:transparent;border:0px;color:#fff;" type="submit" value="注销账号" id="loginout">
+	    	</div>
+	    </div>
+	  </div>
+	</nav>
+	<script type="text/javascript">
+		require(["store"],function(store){
+
+				$("#doctor_name").html(RC.parseOptions(window.location.href).doctor_name);
+			$("#loginout").on("touchend",function(){
+		    	$.ajax({
+		    		type:"post",
+					url: "/user/logout",
+					dataType: "json", 
+					success: function(obj){
+						store.remove("user");
+						window.location.href = "http://www.guanaikangfu.com/gakf/login.html";
+		    		},
+		    		error:function(){
+
+		    		}
+		    	});
+		    })
+		})
+	</script>
 </body>
 </html>
