--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -105,11 +105,11 @@
 			<ul class="list-group">
 				<li class="list-group-item gray" >
 				  	<span  style="float:left;line-height: 20px;">入院日期</span>
-				  	<input id="in_day"  type="date" class="right text-right my-input1 gray" ms-duplex="d.in_day" style="line-height:20px;display:block;">
+				  	<input id="in_day"  type="date" class="right text-left my-input1 gray" ms-duplex="d.in_day" style="line-height:20px;display:block;">
 				</li>
 				<li class="list-group-item">
 				  	<span style="float:left;line-height: 20px;">出院日期</span>
-					<input  id="out_day" type="date" class="right text-right my-input1" ms-duplex="d.out_day" style="line-height:20px;display:block;">
+					<input  id="out_day" type="date" class="right text-left my-input1" ms-duplex="d.out_day" style="line-height:20px;display:block;">
 				</li>
 				
 				<li class="list-group-item">
