--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -16,7 +16,7 @@
 		<ul class="list-group">
 		  <li class="list-group-item">
 		  	<span>主治医生</span>
-		  	<span class="right" ms-duplex="d.doctor_name">{{d.doctor_name}}</span>
+		  	<span class="right" >{{d.doctor_name}}</span>
 		  </li>
 		</ul>
 		<div class="spacer10"></div>
