--- a/node/public/gakf/register.html
+++ b/node/public/gakf/register.html
@@ -85,7 +85,7 @@
 			</div>
 			<div class="checkbox " style="padding: 0px 15px;">
 			    <label style="line-height: 30px;">
-			      <input type="checkbox" name="agree" style="width:20px;" checked> 我已阅读并同意
+			      <input type="checkbox" name="agree" style="width:20px;" > 我已阅读并同意
 			    </label>
 			</div>
 			<a href="javascript:void(0)" class="orange readAgree ">用户协议</a>
