--- a/node/public/gakf/agree.html
+++ b/node/public/gakf/agree.html
@@ -18,7 +18,6 @@
     		line-height: 25px;
 		}
 		h3{text-align: center;}
-		span{text-decoration:underline;}
 	</style>
 </head>
 <body>
@@ -104,33 +103,29 @@
 
     （9）不得发布任何侵犯他人著作权、商标权等知识产权或合法权利的内容；用户应关注并遵守本客户端不时公布或修改的各类合法规则规定。本客户端保有删除各类不符合法律政策或不真实的信息内容而无须通知用户的权利。若用户未遵守以上规定的，本客户端有权作出独立判断并采取暂停或关闭用户帐号等措施。用户须对自己在网上的言论和行为承担法律责任。
 
-<s><b>第5条商品信息</b></s>
+<b>第5条所有权及知识产权条款</b>
 
-<s>本客户端上的服务价格、数量、能否提供等信息随时都有可能发生变动，本客户端不作特别通知。本客户端显示的信息可能会有一定的滞后性或差错，对此情形您知悉并理解；关艾康复欢迎纠错，并会视情况给予纠错者一定的奖励。为表述便利，产品和服务简称为“产品”或“服务”。</s>
+5.1 用户一旦接受本协议，即表明该用户主动将其在任何时间段在本客户端发表的任何形式的信息内容（包括但不限于客户评价、客户咨询、各类话题文章等信息内容）的财产性权利等任何可转让的权利，如著作权财产权（包括并不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及应当由著作权人享有的其他可转让权利），全部独家且不可撤销地转让给<span>本项目组</span>所有，用户同意<span>本项目组</span>有权就任何主体侵权而单独提起诉讼。
 
-<b>第6条所有权及知识产权条款</b>
+5.2 本协议已经构成《中华人民共和国著作权法》第二十五条（条文序号依照2011年版著作权法确定）及相关法律规定的著作财产权等权利转让书面协议，其效力及于用户在关艾康复本客户端上发布的任何受著作权法保护的作品内容，无论该等内容形成于本协议订立前还是本协议订立后。
 
-6.1 用户一旦接受本协议，即表明该用户主动将其在任何时间段在本客户端发表的任何形式的信息内容（包括但不限于客户评价、客户咨询、各类话题文章等信息内容）的财产性权利等任何可转让的权利，如著作权财产权（包括并不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及应当由著作权人享有的其他可转让权利），全部独家且不可撤销地转让给<s>关艾康复</s><span>本项目组</span>所有，用户同意<s>关艾康复</s><span>本项目组</span>有权就任何主体侵权而单独提起诉讼。
+5.3 用户同意并已充分了解本协议的条款，承诺不将已发表于本客户端的信息，以任何形式发布或授权其它主体以任何方式使用（包括但限于在各类网站、媒体上使用）。
 
-6.2 本协议已经构成《中华人民共和国著作权法》第二十五条（条文序号依照2011年版著作权法确定）及相关法律规定的著作财产权等权利转让书面协议，其效力及于用户在关艾康复本客户端上发布的任何受著作权法保护的作品内容，无论该等内容形成于本协议订立前还是本协议订立后。
+5.4 <span>本项目组</span>是本客户端的制作者，拥有此客户端内容及资源的著作权等合法权利，受国家法律保护，有权不时地对本协议及本客户端的内容进行修改，并在本客户端张贴，无须另行通知用户。在法律允许的最大限度范围内，本项目组对本协议及本客户端内容拥有解释权。
 
-6.3 用户同意并已充分了解本协议的条款，承诺不将已发表于本客户端的信息，以任何形式发布或授权其它主体以任何方式使用（包括但限于在各类网站、媒体上使用）。
+5.5 除法律另有强制性规定外，未经本项目组明确的特别书面许可，任何单位或个人不得以任何方式非法地全部或部分复制、转载、引用、链接、抓取或以其他方式使用本客户端的信息内容，否则，本项目组有权追究其法律责任。
 
-6.4 <s>关艾康复</s><span>本项目组</span>是本客户端的制作者，拥有此客户端内容及资源的著作权等合法权利，受国家法律保护，有权不时地对本协议及本客户端的内容进行修改，并在本客户端张贴，无须另行通知用户。在法律允许的最大限度范围内，本项目组对本协议及本客户端内容拥有解释权。
+5.6 本客户端所刊登的资料信息（诸如文字、图表、标识、按钮图标、图像、声音文件片段、数字下载、数据编辑和软件），均是<span>本项目组</span>或其内容提供者的财产，受中国和国际版权法的保护。本客户端上所有内容的汇编是关艾康复的排他财产，受中国和国际版权法的保护。本客户端上所有软件都是<span>本项目组</span>或其关联公司或其软件供应商的财产，受中国和国际版权法的保护。
 
-6.5 除法律另有强制性规定外，未经本项目组明确的特别书面许可，任何单位或个人不得以任何方式非法地全部或部分复制、转载、引用、链接、抓取或以其他方式使用本客户端的信息内容，否则，本项目组有权追究其法律责任。
+<b>第6条责任限制及不承诺担保</b>
 
-6.6 本客户端所刊登的资料信息（诸如文字、图表、标识、按钮图标、图像、声音文件片段、数字下载、数据编辑和软件），均是<s>关艾康复</s><span>本项目组</span>或其内容提供者的财产，受中国和国际版权法的保护。本客户端上所有内容的汇编是关艾康复的排他财产，受中国和国际版权法的保护。本客户端上所有软件都是<s>关艾康复</s><span>本项目组</span>或其关联公司或其软件供应商的财产，受中国和国际版权法的保护。
+除非另有明确的书面说明，本客户端及其所包含的或以其它方式通过本客户端提供给您的全部信息、内容、材料、产品（包括软件）和服务，均是在“按现状”和“按现有”的基础上提供的。除非另有明确的书面说明，<span>本项目组</span>不对本客户端的运营及其包含在本客户端上的信息、内容、材料、产品（包括软件）或服务作任何形式的、明示或默示的声明或担保（根据中华人民共和国法律另有规定的以外）。
 
-<b>第7条责任限制及不承诺担保</b>
-
-除非另有明确的书面说明，本客户端及其所包含的或以其它方式通过本客户端提供给您的全部信息、内容、材料、产品（包括软件）和服务，均是在“按现状”和“按现有”的基础上提供的。除非另有明确的书面说明，<s>关艾康复</s><span>本项目组</span>不对本客户端的运营及其包含在本客户端上的信息、内容、材料、产品（包括软件）或服务作任何形式的、明示或默示的声明或担保（根据中华人民共和国法律另有规定的以外）。
-
-本<s>产品</s><span>客户端</span>不担保本客户端所包含的或以其它方式通过本客户端提供给您的全部信息、内容、材料、产品（包括软件）和服务、其服务器或从本客户端发出的电子信件、信息没有病毒或其他有害成分。如因不可抗力或其它本站无法控制的原因使本客户端销售系统崩溃或无法正常使用导致网上交易无法完成或丢失有关的信息、记录等，本项目组会合理地尽力协助处理善后事宜。
+本<span>客户端</span>不担保本客户端所包含的或以其它方式通过本客户端提供给您的全部信息、内容、材料、产品（包括软件）和服务、其服务器或从本客户端发出的电子信件、信息没有病毒或其他有害成分。如因不可抗力或其它本站无法控制的原因使本客户端销售系统崩溃或无法正常使用导致网上交易无法完成或丢失有关的信息、记录等，本项目组会合理地尽力协助处理善后事宜。
 
 本项目组所承载提供的内容（文、图、视频、音频）均为传播有益健康资讯目的，不对其真实性、科学性、严肃性做任何形式保证。
 
-本<s>产品</s><span>客户端仅提供本项目有关信息，但不作任何咨询回复。如有任何医疗用药咨询，请联络您的医生。</span> <s>拒绝回复医疗健康之外的咨询问题，包括但不限于如下情况：
+本<span>客户端仅提供本项目有关信息，但不作任何咨询回复。如有任何医疗用药咨询，请联络您的医生。</span> 拒绝回复医疗健康之外的咨询问题，包括但不限于如下情况：
 
     （1）非医疗健康类问题，如动物疾病问题、社会意识形态问题等；
 
@@ -152,29 +147,21 @@
 
 本项目组致力于提供正确、完整的健康资讯，但不保证信息的正确性和完整性，且不对因信息的不正确或遗漏导致的任何损失或损害承担责任。
 
-<s>本产品所提供的任何医疗信息，仅供参考，不能替代医生和其他医务人员的建议，如自行使用关艾康复中资料发生偏差，本项目组概不负责，亦不负任何法律责任。
-
-本产品模块中的服务提供者均为拥有中华人民共和国医师资格证书的专业医生。但咨询建议仅为依据提问者描述而提供建议性内容，不能作为诊断及医疗的依据。
-
-是否采用本产品的医生意见为提问者个人行为，本项目组不承担任何可能产生的责任。</s>
-
 本项目组保留对本声明作出不定时修改的权利。
 
-<s>本产品中涉及的疾病教育非百时美施贵宝资助项目,作为项目的一部分, 百时美施贵宝只承担协助协会发放材料的职能[l4]</s>
+<b>第7条协议更新及用户关注义务</b>
 
-<b>第8条协议更新及用户关注义务</b>
+根据国家法律法规变化及网络运营需要，<span>本项目组</span>有权对本协议条款不时地进行修改，修改后的协议一旦被张贴在本客户端上即生效，并代替原来的协议。用户可随时登陆查阅最新协议；用户有义务不时关注并阅读最新版的协议及客户端公告。如用户不同意更新后的协议，可以且应立即停止接受关艾康复本客户端依据本协议提供的服务；如用户继续使用本客户端提供的服务，即视为同意更新后的协议。<span>本项目组</span>建议您在使用本客户端之前阅读本协议及本客户端的公告。如果本协议中任何一条被视为废止、无效或因任何理由不可执行，该条应视为可分的且并不影响任何其余条款的有效性和可执行性。
 
-根据国家法律法规变化及网络运营需要，<s>关艾康复</s><span>本项目组</span>有权对本协议条款不时地进行修改，修改后的协议一旦被张贴在本客户端上即生效，并代替原来的协议。用户可随时登陆查阅最新协议；用户有义务不时关注并阅读最新版的协议及客户端公告。如用户不同意更新后的协议，可以且应立即停止接受关艾康复本客户端依据本协议提供的服务；如用户继续使用本客户端提供的服务，即视为同意更新后的协议。<s>关艾康复</s><span>本项目组</span>建议您在使用本客户端之前阅读本协议及本客户端的公告。如果本协议中任何一条被视为废止、无效或因任何理由不可执行，该条应视为可分的且并不影响任何其余条款的有效性和可执行性。
-
-<b>第9条法律管辖和适用</b>
+<b>第8条法律管辖和适用</b>
 
 本协议的订立、执行和解释及争议的解决均应适用在中华人民共和国大陆地区适用之有效法律（但不包括其冲突法规则）。如发生本协议与适用之法律相抵触时，则这些条款将完全按法律规定重新解释，而其它有效条款继续有效。如缔约方就本协议内容或其执行发生任何争议，双方应尽力友好协商解决；协商不成时，任何一方均可向有管辖权的中华人民共和国大陆地区法院提起诉讼。
 
-<b>第10条其他</b>
+<b>第9条其他</b>
 
-11.1 <s>关艾康复</s><span>本项目组</span>尊重用户<s>和消费者</s>的合法权利，本协议及本客户端上发布的各类规则、声明等其他内容，均是为了更好的、更加便利的为用户和消费者提供服务。本客户端欢迎用户和社会各界提出意见和建议，<s>关艾康复</s><span>本项目组</span>将虚心接受并适时修改本协议及本客户端的各类规则。
+9.1 <span>本项目组</span>尊重用户的合法权利，本协议及本客户端上发布的各类规则、声明等其他内容，均是为了更好的、更加便利的为用户和消费者提供服务。本客户端欢迎用户和社会各界提出意见和建议，<span>本项目组</span>将虚心接受并适时修改本协议及本客户端的各类规则。
 
-11.2 您点击本协议上方的“同意以下协议，提交”按钮即视为您完全接受本协议，在点击之前请您再次确认已知悉并完全理解本协议的全部内容。
+9.2 您点击本协议上方的“同意以下协议，提交”按钮即视为您完全接受本协议，在点击之前请您再次确认已知悉并完全理解本协议的全部内容。
  
 
 需要澄清本项目组即中国医师协会。
