--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -59,7 +59,7 @@
 		  </li> -->
 		  <li class="list-group-item">
 		  	<span>床号</span>
-			<span class="right">{{d.bed_id}}</span>
+			<input class="right text-right my-input1" type="number" placeholder="床号" ms-duplex="d.bed_id" />
 		  </li>
 		</ul>
 		
