--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -96,7 +96,8 @@
   			  		<span>安全用药建议 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.f_drug_count!=''">共 {{d.f_drug_count}} 条建议</span>
-  					<span class="right orange sl8" ms-if="!d.f_drug_count">无建议</span>
+  					<span class="right orange sl8" ms-if="!d.f_drug_count && !d.irr">无建议</span>
+  					<span class="right orange sl8" ms-if="!d.f_drug_count && d.irr">有过敏史</span>
 		  		</a>
 		 	</li>
 		</ul>
