--- a/node/public/gakf/pills.html
+++ b/node/public/gakf/pills.html
@@ -47,7 +47,7 @@
 						<span>药名:</span>
 					</div>
 					<div class="col-xs-8">
-						{{v.drug_name}}
+						<span>{{v.drug_name}}</span>
 					</div>
 				</div>
 				<div class="spacer10"></div>
@@ -56,7 +56,7 @@
 						<span>服药次数:</span>
 					</div>
 					<div class="col-xs-8">
-						{{v.times}} 次
+						<span>{{v.times}} 次</span>
 					</div>
 				</div>
 				<div class="spacer10"></div>
@@ -65,7 +65,7 @@
 						<span>服药片数:</span>
 					</div>
 					<div class="col-xs-8">
-						{{v.drug_per}} 片
+						<span>{{v.drug_per}} 片</span>
 					</div>
 					
 				</div>
@@ -75,7 +75,7 @@
 						<span>服药天数:</span>
 					</div>
 					<div class="col-xs-8">
-						{{v.days}} 天
+						<span>{{v.days}} 天</span>
 					</div>
 					
 				</div>
