--- a/node/public/gakf/recommend.html
+++ b/node/public/gakf/recommend.html
@@ -33,6 +33,9 @@
 			  	</div>
 			  </li>
 		</ul>
+		<div ms-if="d.isf" class="tips">
+			根据患者自己报告的既往及目前疾病和常用药品的禁忌症对应，结果供您参考
+		</div>
 		<!-- <span style="padding:5px 0px;display: inline-block;" >推荐</span>
 		<div style="padding:5px 0px;" ms-if="!d.iss">无推荐</div>
 		<ul class="list-group">
