--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -39,9 +39,8 @@
 		  </div>
 		</nav>
 		<div class="row ads">
-			<div class="col-xs-12" style="padding-right:0px;">
-				<span>此处显示广告</span>
-				<span class="close right" style="width: 20px; height: 20px; text-align: center; line-height: 20px">x</span>
+			<div class="col-xs-12" style="padding:0px;height:100%;background:url(./static/images/ad/accp9.jpg) no-repeat center center;background-size: cover;">
+				<span class="close right" style="width: 20px; height: 20px; text-align: center; line-height: 20px;position: absolute;top: -20px;right:0px;">x</span>
 			</div>
 		</div>
 	</div>
