--- a/node/public/gakf/account.html
+++ b/node/public/gakf/account.html
@@ -14,10 +14,10 @@
 	<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top" >
 	  <div id="my-tab">
 	    <div class="col-xs-6 text-center my-nav-line selected">
-	    	<a href="javascript:void(0)">未审核</a>
+	    	<a href="javascript:void(0)">审核未通过</a>
 	    </div>
 	    <div class="col-xs-6 text-center my-nav-line">
-	    	<a href="/gakf/reject.html">已审核</a>
+	    	<a href="/gakf/reject.html">审核已通过</a>
 	    </div>
 	  </div>
 	</nav>
