--- a/node/public/gakf/account.html
+++ b/node/public/gakf/account.html
@@ -14,10 +14,10 @@
 	<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top" >
 	  <div id="my-tab">
 	    <div class="col-xs-6 text-center my-nav-line selected">
-	    	<a href="javascript:void(0)">审核未通过</a>
+	    	<a href="javascript:void(0)">未审核</a>
 	    </div>
 	    <div class="col-xs-6 text-center my-nav-line">
-	    	<a href="/gakf/reject.html">审核已通过</a>
+	    	<a href="/gakf/reject.html">已审核</a>
 	    </div>
 	  </div>
 	</nav>
@@ -42,9 +42,14 @@
 	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom">
 	  <div class="container text-center" style="height: 42px; line-height: 42px;">
 	    <div class="row">
-	    	<div class="col-xs-12">
+	    	<div class="col-xs-6">
 	    		<a href="javascript:void(0)" style="display:inline-block;width:100%;" ms-click="agree">
 			    	<span style="color:#fff;">同意</span>
+			    </a>
+	    	</div>
+	    	<div class="col-xs-6">
+	    		<a href="javascript:void(0)" style="display:inline-block;width:100%;" ms-click="reject">
+			    	<span style="color:#fff;">拒绝</span>
 			    </a>
 	    	</div>
 	    </div>
